# ZhaBotV2

./: .env.dev  .env.prod.sample  .gitignore  404.html  Dockerfile  LICENSE  README.md  bot.py  changelog.html  docker-compose.yml  index.html  package.json  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
assets/: 404.2be8097c.js  404.53e5be57.js  404.5df27aad.js  404.916b5c5c.js  404.9977639e.js  404.c5d07300.js  404.f03be80a.js  404.html.0d255d95.js  404.html.218b1dcd.js  404.html.70340b9f.js  404.html.7ceeb847.js  404.html.7f3f635b.js  404.html.99d9a96f.js  404.html.a0afc9a8.js  Layout.46097ee4.js  Layout.72afd099.js  Layout.76e66f7b.js  Layout.793a4efe.js  Layout.7c0d0445.js  Layout.96f2134c.js  Layout.fe75c30e.js  admin.html.11622c43.js  admin.html.13414e93.js  admin.html.18f4f1c5.js  admin.html.27229a84.js  admin.html.46807744.js  admin.html.5e501392.js  admin.html.7450919b.js  admin.html.814a2755.js  admin.html.9cb48726.js  admin.html.acada362.js  admin.html.f6a30800.js  app.052b24b1.js  app.08e8f3ba.js  app.2ad99d2b.js  app.30939edb.js  app.6583e014.js  app.a8057943.js  app.eae06bd7.js  bans.html.09f034ee.js  (+152 more)
deploy/: index.html
docs/: README.md  changelog.md
guide/: admin.html  bans.html  chat.html  checkin.html  economic.html  horserace.html  index.html  info.html  notice_request.html  pinyin.html  qa.html  russian_roulette.html  sx.html  tasks.html  weather.html
src/: imports.py  permission.py  rules.py
store/: bot.db
test/: dicttest.py  enumtest.py  listtest.py  mongotest.py  randomtest.py  trainbot.py  weather_test.py
(+110 files in other folders)
